--- a/scripts/template3.j2
+++ b/scripts/template3.j2
@@ -1,6 +1,6 @@
 mission "Fleet: Deploy MSD on {{ origin }}"
 	name "Fleet: Deploy MSD on {{ origin }}"
-	description `Deploy the Mobile Space Dock installations on the orbit of spaceport-less {{ origin }} for in-situ reparis and outfit changes. Deployed MSD dock cannot re-redeployed elsewhere unless repacked. Check MSD log to track deployment.`
+	description `Deploy the Mobile Space Dock installations on the orbit of spaceport-less {{ origin }} for in-situ repairs and outfit changes. Deployed MSD dock cannot re-redeployed elsewhere unless repacked. Check MSD log to track deployment.`
 	repeat
 	landing
 	source "{{ origin }}"
